--- a/scripts/telephone_cleaning_Script_ARCHIVE_NIJ.Rmd
+++ b/scripts/telephone_cleaning_Script_ARCHIVE_NIJ.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Telephone Assessment Data Cleanning Script"
+title: "Telephone Assessment Data Cleanning Script ARCHIVE NIJ"
 author: "Min Zhang"
 date: ""
 output: html_document
@@ -642,168 +642,10 @@ cts %>%
 
 ### CTS Calculations & Subscale 
 ```{r cts_calculations }
-cts_calc <-
-  cts %>%
-  pct_miss_fun(
-    id = c('id', 'cts_screen'),
-    n_items = 20
-  ) %>%
-  full_join(cts,
-            by = 'id') %>%
-  mutate(across(-id, as.numeric)) %>%
-  filter(
-    is.na(miss_pct) |
-      miss_pct < 20
-         ) %>%
-  mutate(
-    across(
-      .cols = c(ct1:ct20),
-      .fns = ~case_when(
-        .x == -77 ~ NA_real_,
-        .x == -55 ~ NA_real_,
-        TRUE ~ .x
-      )
-    )
-  )
-
-cts_calc <- 
-  cts_calc %>% 
-  mutate(
-    across(
-      .cols = c(ct1, ct2, ct7, ct8),
-      .fns = ~case_when(
-        .x == 1 ~ 1,
-        .x == 2 ~ 2,
-        .x == 3 ~ 4,
-        .x == 4 ~ 8,
-        .x == 5 ~ 15.5, # midpoint between 11-20
-        .x == 6 ~ 20,
-        .x == 7 ~ 0,
-        .x == 8 ~ 0,
-        TRUE ~ NA_real_
-      ),
-      .names = '{col}_midpoint'
-    )
-  )
-
-
-
-
-cts_complete <-
-  cts_calc %>%
-  select(
-    -missing_n,
-    -miss_pct
-  ) %>%
-    mutate(
-      across(
-          .cols = c(ct1:ct20),
-          .fns = ~case_when(
-            .x %in% c(1, 2, 3, 4, 5, 6) ~ 1,
-            .x %in% c(7, 8) ~ 0,
-            TRUE ~ NA_real_
-          ),
-          .names = '{col}_dum'
-        )
-    )
-
-# ind = the participant's behaviors
-# part = the participant's partner's behaviors
-cts_complete <-
-  cts_complete %>%
-    subscale_create(
-      total_only = TRUE,
-      scale1 = c('ct3_dum', 'ct13_dum'),
-      scale2 = c('ct4_dum', 'ct14_dum'),
-      scale3 = c('ct5_dum', 'ct15_dum'),
-      scale4 = c('ct6_dum', 'ct16_dum'),
-      scale5 = c('ct9_dum', 'ct11_dum'),
-      scale6 = c('ct10_dum', 'ct12_dum'),
-      scale7 = c('ct17_dum', 'ct19_dum'),
-      scale8 = c('ct18_dum', 'ct20_dum'),
-      scale9 = c('ct1_midpoint', 'ct7_midpoint'),
-      scale10 = c('ct2_midpoint', 'ct8_midpoint')
-    ) %>%
-    rename(
-      # past year severity only
-      cts_psy_agg_ind_sev = total1,
-      cts_psy_agg_part_sev = total2,
-      cts_injury_ind_sev = total3,
-      cts_injury_part_sev = total4,
-      cts_assault_ind_sev = total5,
-      cts_assault_part_sev = total6,
-      cts_sex_ind_sev = total7,
-      cts_sex_part_sev = total8,
-      cts_negotiate_ind = total9,
-      cts_negotiate_part = total10
-    )
-
-cts_complete <-
-  cts_complete %>%
-    mutate(
-      cts_psy_agg_ind_prev = if_else(cts_psy_agg_ind_sev == 0, 0, 1),
-      cts_psy_agg_part_prev = if_else(cts_psy_agg_part_sev == 0, 0, 1),
-      cts_injury_ind_prev = if_else(cts_injury_ind_sev == 0, 0, 1),
-      cts_injury_part_prev = if_else(cts_injury_part_sev == 0, 0, 1),
-      cts_assault_ind_prev = if_else(cts_assault_ind_sev == 0, 0, 1),
-      cts_assault_part_prev = if_else(cts_assault_part_sev == 0, 0, 1),
-      cts_sex_ind_prev = if_else(cts_sex_ind_sev == 0, 0, 1),
-      cts_sex_part_prev = if_else(cts_sex_part_sev == 0, 0, 1),
-      cts_psy_agg_mutual = case_when(
-        (cts_psy_agg_ind_prev == 1 &
-          cts_psy_agg_part_prev == 1) ~ 3,
-        (cts_psy_agg_ind_prev == 0 &
-           cts_psy_agg_part_prev == 1) ~ 1,
-        (cts_psy_agg_ind_prev == 1 &
-           cts_psy_agg_part_prev == 0) ~ 2,
-        (cts_psy_agg_ind_prev == 0 &
-           cts_psy_agg_part_prev == 0) ~ -99
-      ),
-      cts_injury_mutual = case_when(
-        (cts_injury_ind_prev == 1 &
-           cts_injury_part_prev == 1) ~ 3,
-        (cts_injury_ind_prev == 0 &
-           cts_injury_part_prev == 1) ~ 1,
-        (cts_injury_ind_prev == 1 &
-           cts_injury_part_prev == 0) ~ 2,
-        (cts_injury_ind_prev == 0 &
-           cts_injury_part_prev == 0) ~ -99
-      ),
-      cts_assault_mutual = case_when(
-        (cts_assault_ind_prev == 1 &
-           cts_assault_part_prev == 1) ~ 3,
-        (cts_assault_ind_prev == 0 &
-           cts_assault_part_prev == 1) ~ 1,
-        (cts_assault_ind_prev == 1 &
-           cts_assault_part_prev == 0) ~ 2,
-        (cts_assault_ind_prev == 0 &
-           cts_assault_part_prev == 0) ~ -99
-      ),
-      cts_sex_mutual = case_when(
-        (cts_sex_ind_prev == 1 &
-           cts_sex_part_prev == 1) ~ 3,
-        (cts_sex_ind_prev == 0 &
-           cts_sex_part_prev == 1) ~ 1,
-        (cts_sex_ind_prev == 1 &
-           cts_sex_part_prev == 0) ~ 2,
-        (cts_sex_ind_prev == 0 &
-           cts_sex_part_prev == 0) ~ -99
-      )
-    )
-
-# Dropping dummy-coded variables for archive
-# pulling in original items with missing data code
-cts_complete <- cts_complete %>%
-  select(-ct1_dum:-ct20_dum) %>%
-  # We are not include midpoint variable becauey they were used to compute variable, but meaningless for analysis
-  select(id, cts_psy_agg_ind_sev:cts_sex_mutual) %>%
-  merge(cts, by="id") %>%
+# We are not including compution for archive 
+cts_complete <- cts %>%
   # reorder dataset 
-  relocate(cts_psy_agg_ind_sev:cts_sex_mutual, .after = "ct20") %>%
   rename_with(~ ifelse(substr(., 1, 2) == "ct" & substr(., 1, 3) != "cts", paste0("cts", substr(., 3, nchar(.))), .), starts_with("ct"))
-  
-  
-
 ```
 
 ## BCAP
@@ -3447,105 +3289,10 @@ cts_pc_remove <- cts_pc_miss %>% filter(miss_pct >= 20) %>% pull(id)
 
 ### CTS_PC Calculations 
 ```{r cts-pc calculation & sbuscale}
-
-cts_pc_calc <-
-  cts_pc %>%
-    mutate(across(-c(id), as.numeric)) %>%
-  mutate(
-    across(
-      .cols = -c(id),
-      .fns = ~case_when(
-        .x < -10 ~ NA_real_,
-        TRUE ~ .x
-      )
-    )
-  )
-# missing data rule is not applied
-
-cts_pc_complete <-
-  cts_pc_calc %>%
-  # NVD items: 1,2,5,12
-  mutate(
-  # Raw Scoring for Nonviolent Discipline - Past Year (Chronicity)
-         cts_pc_NVDP = rowSums(select(., 'a1_r', 'a2_r', 'a5_r', 'a12_r') * (select(., 'a1_r', 'a2_r', 'a5_r', 'a12_r') > 0), na.rm = TRUE),
-  # Count of Nonviolent Discipline Responses 
-        cts_pc_NVDC = rowSums(select(., a1_r, a2_r, a5_r, a12_r) > 0, na.rm = TRUE),
-  # # Raw Scoring for Nonviolent Discipline Past Year - Mean (Chronicity)
-        cts_pc_NVDM = ifelse(cts_pc_NVDC == 0 & cts_pc_NVDP == 0, 0, round(cts_pc_NVDP / cts_pc_NVDC, 2)),
-  # Raw Scoring for Nonviolent Discipline Past Year (Prevalence) 
-         cts_pc_NVDPP= rowSums(select(., 'a1_r', 'a2_r', 'a5_r', 'a12_r') > 0, na.rm = T), 
-  # Raw Scoring for Nonviolent Discipline - Lifetime (Greater than past year Prevalence)
-         cts_pc_NVDL = rowSums(select(., 'a1_r', 'a2_r', 'a5_r', 'a12_r') == -2, na.rm = T),  
-  # Raw Scoring for Nonviolent Discipline (Ever Prevalence)
-         cts_pc_NVDEP = cts_pc_NVDL + cts_pc_NVDPP 
-) %>% 
-  # PSA items: 6,8,9,10,14
-    # Raw Scoring for Psychological Aggression - Past Year (Chronicity)
-    mutate(
-      cts_pc_PSAP = rowSums(select(., 'a6_r', 'a8_r', 'a9_r', 'a10_r', 'a14_r') * (select(., 'a6_r', 'a8_r', 'a9_r', 'a10_r', 'a14_r') > 0), na.rm = TRUE),
-  # Count of Psychological Aggression Responses
-      cts_pc_PSAC = rowSums(select(., 'a6_r', 'a8_r', 'a9_r', 'a10_r', 'a14_r') > 0, na.rm = TRUE),
-  # Raw Scoring for Psychological Aggression Past Year - Mean (Chronicity)
-     cts_pc_PSAM = ifelse(cts_pc_PSAC == 0 & cts_pc_PSAP == 0, 0, round(cts_pc_PSAP / cts_pc_PSAC, 2)),
-  #  Raw Scoring for Psychological Aggression - Past Year (Prevalence)
-      cts_pc_PSAPP = rowSums(select(., 'a6_r', 'a8_r', 'a9_r', 'a10_r', 'a14_r') > 0, na.rm = T),
-  # Raw Scoring for Psychological Aggression Discipline - Lifetime (Ever Prevalence greater than past year)
-      cts_pc_PSAL = rowSums(select(., 'a6_r', 'a8_r', 'a9_r', 'a10_r', 'a14_r') == -2, na.rm = T),
-  # Raw Scoring for Psychological Aggression (Ever Prevalance)
-      cts_pc_PSAEP = cts_pc_PSAL + cts_pc_PSAPP
-    ) %>%
-  # PHA Items: 3,4,7,11,13
-  mutate(
-  # Raw Scoring for Physical Assault - Past Year (Chronicity)
-    cts_pc_PHAP = rowSums(select(., 'a3_r', 'a4_r', 'a7_r', 'a11_r', 'a13_r') * (select(., 'a3_r', 'a4_r', 'a7_r', 'a11_r', 'a13_r') > 0), na.rm = TRUE),
-  # Count of Physical Assault Responses
-    cts_pc_PHAC = rowSums(select(., 'a3_r', 'a4_r', 'a7_r', 'a11_r', 'a13_r') > 0, na.rm = TRUE),
-  # Raw Scoring for Physical Assault Past Year - Mean (Chronicity)
-    cts_pc_PHAM = ifelse(cts_pc_PHAC == 0 & cts_pc_PHAP == 0, 0, round(cts_pc_PHAP / cts_pc_PHAC, 2)),
-  # Raw Scoring for Physical Assault - Past Year (Prevalence)
-    cts_pc_PHAPP =  rowSums(select(., 'a3_r', 'a4_r', 'a7_r', 'a11_r', 'a13_r') > 0, na.rm = T),
-  # Raw Scoring for Physical Assault - Lifetime (Ever Prevalence greater than 1 year)
-    cts_pc_PHAL = rowSums(select(., 'a3_r', 'a4_r', 'a7_r', 'a11_r', 'a13_r') == -2, na.rm = T),
-  # Raw Scoring for Physical Assault (Ever Prevalence)
-    cts_pc_PHAEP = cts_pc_PHAL + cts_pc_PHAPP
-  ) %>%
-  # WKD Items: 16, 17, 18
-  # It is correct for 15_r to be checked but not included in computations
-  mutate(
-    # Raw Scoring for Weekly Discipline - Past Week (Chronicity)
-    cts_pc_WKDP = if_else(!is.na(a15_r) & !is.na(a16_r) & !is.na(a17_r) & !is.na(a18_r), 0, NA),
-    cts_pc_WKDP = cts_pc_WKDP + ifelse(a16_r > 0, a16_r, 0) + ifelse(a17_r > 0, a17_r, 0) + ifelse(a18_r > 0, a18_r, 0),
-    # Count of Weekly Discipline Responses
-    cts_pc_WKDC = if_else(!is.na(a15_r) & !is.na(a16_r) & !is.na(a17_r) & !is.na(a18_r), 0, NA),
-    cts_pc_WKDC = cts_pc_WKDC + ifelse(!is.na(a16_r), 1, 0) + ifelse(!is.na(a17_r), 1, 0) + ifelse(!is.na(a18_r), 1, 0),
-    # Raw Scoring for Weekly Discipline Past Week - Mean (Chronicity)
-    cts_pc_WKDM = ifelse(cts_pc_WKDC == 0 & cts_pc_WKDP == 0, 0, round(cts_pc_WKDP / cts_pc_WKDC, 2)),
-    # Raw Scoring for Weekly Discipline - Past Week (Prevalence)
-    cts_pc_WKDPP = rowSums(select(., 'a16_r', 'a17_r', 'a18_r') > 0, na.rm = T)
-  )%>%
-    # NEG Items: 19 20 21 22 23
-  mutate(
-    # Raw Scoring for Neglect - Past Year (Chronicity)
-    cts_pc_NEGP = rowSums(select(., 'a19_r', 'a20_r', 'a21_r', 'a22_r', 'a23_r') * (select(., 'a19_r', 'a20_r', 'a21_r', 'a22_r', 'a23_r') > 0), na.rm = TRUE),
-    # Count of Neglect Responses
-    cts_pc_NEGC = rowSums(select(., 'a19_r', 'a20_r', 'a21_r', 'a22_r', 'a23_r') > 0, na.rm = TRUE),
-    # Raw Scoring for Neglect Past Year - Mean (Chronicity)
-    cts_pc_NEGM = ifelse(cts_pc_NEGC == 0 & cts_pc_NEGP == 0, 0, round(cts_pc_NEGP / cts_pc_NEGC, 2)),
-    # Raw Scoring for Neglect - Past Year (Prevalence)
-    cts_pc_NEGPP = rowSums(select(., 'a19_r', 'a20_r', 'a21_r', 'a22_r', 'a23_r') > 0, na.rm = T),
-    # Raw Scoring for Neglect - Lifetime (Ever Prevalence)
-    cts_pc_NEGL = rowSums(select(., 'a19_r', 'a20_r', 'a21_r', 'a22_r', 'a23_r') == -2, na.rm = T),
-    # Raw Scoring for Neglect (Ever Prevalance)
-    cts_pc_NEGEP = cts_pc_NEGL + cts_pc_NEGPP)
-
-
+# We are not include computation for Archive 
 # finalize to add back in appropriate missing values
-cts_pc_complete <- cts_pc_complete %>%
-  select(id, cts_pc_NVDP:cts_pc_NEGEP) %>%
+cts_pc_complete <- cts_pc %>%
   rename_all(tolower) %>%
-  merge(cts_pc, by="id") %>%
- # mutate(across(c(a1:a23, a1_r:a23_r), ~ifelse(cts_parent_screen == 0, -55, ifelse(is.na(.), -77, as.numeric(.))))) %>%
-  mutate(across(c(cts_pc_nvdp:cts_pc_negep), ~ifelse(cts_parent_screen == 0, -99, ifelse(is.na(.), -77, as.numeric(.))))) %>%
   # update a prefix to cts_pc
   rename_with(~ sub("^a", "cts_pc", .), starts_with("a")) %>%
   relocate(cts_parent_screen:cts_pc23_r, .after = "id")
